kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-devops-platform-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: local-devops-platform
  template:
    metadata:
      labels:
        app: local-devops-platform
    spec:
      containers:
        - name: local-devops-platform
          image: adrianwisniewskiit/local-devops-platform:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
