kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-devops-platform-service
  labels:
    app: local-devops-platform
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5000"
spec:
  type: ClusterIP
  selector:
    app: local-devops-platform
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
